# typoscale.rlib

./: Cargo.toml  GPT-3.md  README.md  prototype.py
src/: iter.rs  lib.rs
tests/: mod.rs
