[package]
name = "typoscale"
version = "0.2.1"
edition = "2021"
description = " 1, 1 1⁄10, 1 3⁄10, 1 ½, 1 7⁄10, 2, 2 ⅕, 2 ⅗, 3, 3 ⅖, 4, 4 ½, 5 ⅕, 6, 6 9⁄10, 8, 9 1⁄10, 10 ½, 12 1⁄10, 13 9⁄10, 16, 18 3⁄10, 21 1⁄10, 24 ⅕, 27 ⅘, 32, 36 7⁄10, 42 ⅕, 48 ½, 55 7⁄10, 64, 73 ½, 84 ⅖, 97, 111 ⅖, 128, 147, 168 ⅘, 194, 222 ⅘, 256... "
keywords = ["typography", "fonts", "font-editor", "mfek"]
repository = "https://github.com/MFEK/typoscale.rlib"
license = "Apache-2.0"
authors = ["Fredrick R. Brennan <copypaste@kittens.ph>", "MFEK Authors", "GPT-3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
